# simdata

./: .gitignore  pyproject.toml  readme.md
simdata/: __init__.py  sim.py
