[tool.poetry]
name = "simdata"
version = "0.0.6"
description = ""
authors = ["dm <git@defend.sh>"]
packages = [{include = "simdata"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
numpy = "^2.1.3"
polars = "^1.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
